--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 /* GLOBAL STYLES
+
+
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
@@ -6,7 +8,10 @@ body {
     padding-top: 3rem;
     padding-bottom: 3rem;
     color: #5a5a5a;
+    background-color: blanchedalmond;
   }
+
+
   
   
   /* CUSTOMIZE THE CAROUSEL
